<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B26">
    <TextView
        android:id="@+id/supportText"
        android:text="@string/support"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/bitcoinAddress"
        android:text="@string/bitcoinA"
        android:layout_marginTop="70dp"
        android:paddingStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/B_address"
        android:text="@string/b_address"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dp"
        android:paddingStart="8dp"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/litecoinAddress"
        android:text="@string/litecoinA"
        android:layout_marginTop="50dp"
        android:paddingStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/L_address"
        android:text="@string/l_address"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dp"
        android:paddingStart="8dp"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/ethereumAddress"
        android:text="@string/ethereumA"
        android:layout_marginTop="50dp"
        android:paddingStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/E_address"
        android:text="@string/e_address"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dp"
        android:paddingStart="8dp"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/patreonAddress"
        android:text="@string/patron"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/p_address"
        android:text="@string/p_address"
        android:textColor="#e6461a"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:paddingStart="8dp"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>