<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B26"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="tech.dronerace.pomodoropremium.FirstBlood">

    <TextView
        android:id="@+id/text_pomodoro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstpage_name"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_stage"
        android:textSize="12sp"
        android:textColor="#6574ff"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_below="@id/text_pomodoro"
        android:gravity="right"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="50dp">
        <Button
            android:id="@+id/buttonWork"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="40dp"
            android:text="@string/go_work"
            style="@style/buttonText"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>
