<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#1B1B26"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/chooseTextFront"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"/>
    <LinearLayout
        android:id="@+id/layout25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/chooseTextFront"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/button_25id"
            android:layout_width="125dp"
            android:layout_height="95dp"
            android:background="@drawable/app_25_5"
            android:onClick="click25"/>
        <TextView
            android:id="@+id/text_25id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_25"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:textSize="10sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout35"
        android:layout_below="@id/layout25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/button_35id"
            android:layout_width="125dp"
            android:layout_height="105dp"
            android:background="@drawable/app_35_5"
            android:onClick="click35"/>
        <TextView
            android:id="@+id/text_35id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_35"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:textSize="10sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout45"
        android:layout_below="@id/layout35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/button_45id"
            android:layout_width="125dp"
            android:layout_height="85dp"
            android:background="@drawable/app_45_5"
            android:onClick="click45"/>
        <TextView
            android:id="@+id/text_45id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_45"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:textSize="10sp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/app_customcube_green"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/customBuild"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="7dp"/>
    <TextView
        android:id="@+id/customBuild"
        android:text="@string/text_custom"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#BE1E2D"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="27dp"
        android:layout_gravity="center"
        android:onClick="clickCustomBuild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/app_customcube_purple"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/customBuild"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="25dp"/>
</RelativeLayout>