<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B26">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/timer_id"
            android:layout_marginTop="30dp"
            android:layout_marginRight="8dp"
            style="@style/timerStyle"
            android:text="@string/timer"/>
        <TextView
            android:id="@+id/timerMs_id"
            style="@style/timerMsStyle"
            android:text="@string/timerMs"
            android:layout_marginTop="45dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">
        <Button
            android:layout_marginRight="2.5dp"
            android:layout_marginLeft="2.5dp"
            android:id="@+id/b_start"
            style="@style/buttonText"
            android:text="@string/start"
            android:onClick="clickStart"/>
        <Button
            android:layout_marginRight="2.5dp"
            android:layout_marginLeft="2.5dp"
            android:id="@+id/b_reset"
            style="@style/buttonText"
            android:text="@string/reset"
            android:onClick="clickReset"/>
        <Button
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:id="@+id/b_stop"
            style="@style/buttonText"
            android:text="@string/stop"
            android:onClick="clickStop"/>
        <Button
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:id="@+id/b_break"
            style="@style/buttonText"
            android:text="@string/breakk"
            android:onClick="clickBreak"/>
    </LinearLayout>
    <TextView
        android:id="@+id/skip_id"
        android:text="@string/skip"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:textStyle="normal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="clickSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/productivityLayout"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView_block1"
            android:paddingTop="10dp"
            android:textSize="40sp"
            android:freezesText="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        <ImageView
            android:id="@+id/imageView_block2"
            android:paddingTop="10dp"
            android:textSize="40sp"
            android:freezesText="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        <ImageView
            android:id="@+id/imageView_block3"
            android:paddingTop="10dp"
            android:textSize="40sp"
            android:freezesText="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="60dp"/>
        <ImageView
            android:id="@+id/imageView_block4"
            android:paddingTop="10dp"
            android:textSize="40sp"
            android:freezesText="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        <ImageView
            android:id="@+id/imageView_block5"
            android:paddingTop="10dp"
            android:textSize="40sp"
            android:freezesText="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/productivityLayout2"
        android:paddingLeft="8dp"
        android:layout_marginTop="-8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView_block6"
            android:paddingTop="10dp"
            android:textSize="40sp"
            android:freezesText="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        <ImageView
            android:id="@+id/imageView_block7"
            android:paddingTop="10dp"
            android:textSize="40sp"
            android:freezesText="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        <ImageView
            android:id="@+id/imageView_block8"
            android:paddingTop="10dp"
            android:textSize="40sp"
            android:freezesText="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="60dp"/>
        <ImageView
            android:id="@+id/imageView_block9"
            android:paddingTop="10dp"
            android:textSize="40sp"
            android:freezesText="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        <ImageView
            android:id="@+id/imageView_block10"
            android:paddingTop="10dp"
            android:textSize="40sp"
            android:freezesText="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/progressImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"/>
        <ImageView
            android:id="@+id/donateButton"
            android:background="@drawable/donate"
            android:layout_alignParentEnd="true"
           android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:onClick="clickDonate"
            android:layout_width="20dp"
            android:layout_height="70dp"/>
    </RelativeLayout>
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/donateButton"
            android:background="@drawable/donate"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:onClick="clickDonate"
            android:layout_width="70dp"
            android:layout_height="20dp"/>
    </LinearLayout>
    -->
</LinearLayout>